--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,20 @@ julia:
 env:
   - PYTHON=""
 matrix:
+  fast_finish: true
   allow_failures:
     - julia: nightly
     - os: osx
+jobs:
+  allow_failures:
+    - script: bash ./docs/travis.sh
+  include:
+    - stage: "Documentation"
+      julia: 1.1
+      os: linux
+      script: bash ./docs/travis.sh
+      after_success: skip
 notifications:
   email: false
 codecov: true
 coveralls: true
-after_script:
-  - bash ./docs/travis.sh
