--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,9 @@ jobs:
   include:
     - stage: "Nightly"
       julia: nightly
-      os: linux
       after_success: skip
-    - julia: nightly
-      os: osx
-      after_success: skip
+    - os: linux
+    - os: osx
     - stage: "Documentation"
       julia: 1.1
       os: linux
