Revert "Test another variation of the Travis config."
This reverts commit 2d284638237a5ee9ac04a9f159e7a890b982c6f4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,11 @@ jobs:
   include:
     - stage: "Nightly"
       julia: nightly
+      os: linux
       after_success: skip
-    - os: linux
-    - os: osx
+    - julia: nightly
+      os: osx
+      after_success: skip
     - stage: "Documentation"
       julia: 1.1
       os: linux
