--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,34 @@
 language: julia
+
 os:
   - linux
   - osx
+  - windows
+
 julia:
-  - 1.0
   - 1.1
+  - 1.2
+  - 1.3
+  - nightly
+
 env:
   - PYTHON=""
+
 matrix:
-  fast_finish: true
-jobs:
   allow_failures:
     - julia: nightly
-    - script: bash ./docs/travis.sh
+  fast_finish: true
+
+jobs:
   include:
-    - stage: "Nightly"
-      julia: nightly
-      os: linux
-      after_success: skip
-    - julia: nightly
-      os: osx
-      after_success: skip
     - stage: "Documentation"
       julia: 1.1
       os: linux
       script: bash ./docs/travis.sh
       after_success: skip
+
 notifications:
   email: false
+
 codecov: true
 coveralls: true
