--- a/Project.toml
+++ b/Project.toml
@@ -9,8 +9,16 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 
+[compat]
+Combinatorics = "^1.0"
+Documenter = "^0.23, 0.24"
+SafeTestsets = "^0.0.1"
+SymPy = "^1.0"
+julia = "^1.1"
+
 [extras]
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets"]
