--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ julia:
   - 1.1
   - 1.2
   - 1.3
+  - 1.4
   - nightly
 
 env:
@@ -17,15 +18,11 @@ env:
 matrix:
   allow_failures:
     - julia: nightly
+    - os: windows
   fast_finish: true
 
-jobs:
-  include:
-    - stage: "Documentation"
-      julia: 1.1
-      os: linux
-      script: bash ./docs/travis.sh
-      after_success: skip
+after_script:
+  - bash ./docs/travis.sh
 
 notifications:
   email: false
