--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 
 [compat]
 Combinatorics = "^1.0"
-Documenter = "^0.23, 0.24"
+Documenter = "0.23, ^0.24"
 SafeTestsets = "^0.0.1"
 SymPy = "^1.0"
 julia = "^1.1"
