--- a/Project.toml
+++ b/Project.toml
@@ -7,13 +7,11 @@ version = "0.2.1"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
+SymEngine = "123dc426-2d89-5057-bbad-38513e3affd8"
 
 [compat]
 Combinatorics = "^1.0"
 Documenter = "0.23, ^0.24"
-SafeTestsets = "^0.0.1"
-SymPy = "^1.0"
 julia = "^1.1"
 
 [extras]
