--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 [compat]
 Combinatorics = "^1.0"
 Documenter = "0.23, ^0.24"
+SymEngine = "^0.7"
 julia = "^1.1"
 
 [extras]
