--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Combinatorics = "^1.0"
 Documenter = "0.23, ^0.24"
 SymEngine = "^0.7"
+SymPy = "^1.0"
 julia = "^1.1"
 
 [extras]
