Clean up compat info.

--- a/Project.toml
+++ b/Project.toml
@@ -12,8 +12,8 @@ SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 
 [compat]
 Combinatorics = "^1.0"
-Documenter = "0.23, ^0.24"
-SymEngine = "^0.7, 0.8"
+Documenter = "0.23, 0.24"
+SymEngine = "0.7, 0.8"
 SymPy = "^1.0"
 julia = "^1.1"
 
