--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -15,6 +15,10 @@ jobs:
       - uses: julia-actions/setup-julia@latest
         with:
           version: 1.3
+      - name: set environment variables
+        uses: allenevans/set-env@v1.0.0
+        with:
+          PYTHON: ''
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy Documentation
