--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,7 @@ notifications:
 
 codecov: true
 coveralls: true
+
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - travis_wait 30 julia --project -e 'using Pkg; Pkg.build(); Pkg.test(; coverage=true)';
