--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,5 @@ coveralls: true
 
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - travis_wait 30 julia --project -e 'using Pkg; Pkg.build(); Pkg.test(; coverage=true)';
+  - travis_wait 30 julia --project -e 'using Pkg; Pkg.build();';
+  - travis_wait 30 julia --project -e 'using Pkg; Pkg.test(; coverage=true)';
