--- a/Project.toml
+++ b/Project.toml
@@ -19,8 +19,11 @@ SymPy = "^1.0"
 julia = "^1.3"
 
 [extras]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
+docs = ["Documenter", "Plots"]
 test = ["Test", "SafeTestsets"]
