--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ coveralls: true
 
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia --project -e 'using Pkg; Pkg.build();';
-  - julia --project -e 'using Pkg; Pkg.precompile();';
+  - julia --project -e 'using Pkg; Pkg.build()';
+  - julia --project -e 'using Pkg; Pkg.precompile()';
   - julia --project -e 'using Pkg; Pkg.test(; coverage=true)';
