--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,7 @@ Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+#Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SymEngine = "123dc426-2d89-5057-bbad-38513e3affd8"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
@@ -17,13 +17,14 @@ SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Combinatorics = "1"
 Documenter = "0.23, 0.24, 0.25"
 LaTeXStrings = "1.0, 1.1, 1.2"
-Plots = "1"
+#Plots = "1"
 RecipesBase = "1"
 SymEngine = "0.7, 0.8"
 SymPy = "1"
 julia = "^1.3"
 
 [extras]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
