--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ julia:
 
 jobs:
   allow_failures:
+    - julia: 1.3
+    - julia: 1.4
     - julia: nightly
   fast_finish: true
 
@@ -21,3 +23,12 @@ notifications:
 
 codecov: true
 coveralls: true
+
+script:
+  - julia --project --color=yes -e 'using Pkg; Pkg.build(verbose=true)';
+  - travis_wait 45 julia --project --color=yes -e 'using Pkg; Pkg.precompile()';
+  - travis_wait 45 julia --project --color=yes -e 'using Pkg; Pkg.test(coverage=true)';
+
+after_success:
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
