--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ julia:
 
 jobs:
   allow_failures:
-    - julia: 1.3
     - julia: 1.4
+    - julia: 1.5
     - julia: nightly
   fast_finish: true
 
@@ -26,8 +26,8 @@ coveralls: true
 
 script:
   - julia --project --color=yes -e 'using Pkg; Pkg.build(verbose=true)';
-  - travis_wait 45 julia --project --color=yes -e 'using Pkg; Pkg.precompile()';
-  - travis_wait 45 julia --project --color=yes -e 'using Pkg; Pkg.test(coverage=true)';
+  - julia --project --color=yes -e 'using Pkg; Pkg.precompile()';
+  - travis_wait 50 julia --project --color=yes -e 'using Pkg; Pkg.test(coverage=true)';
 
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
