--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -2,4 +2,5 @@
 ElectromagneticFields = "d6c1ba6f-ee03-53af-b876-68cefeb88ec8"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
