--- a/Project.toml
+++ b/Project.toml
@@ -13,11 +13,11 @@ SymEngine = "123dc426-2d89-5057-bbad-38513e3affd8"
 
 [compat]
 Combinatorics = "1"
-Documenter = "0.23, 0.24, 0.25, 0.26, 0.27"
-LaTeXStrings = "1.0, 1.1, 1.2"
+Documenter = "1"
+LaTeXStrings = "1"
 RecipesBase = "1"
-SymEngine = "0.7, 0.8"
-julia = "^1.3"
+SymEngine = "0.12"
+julia = "1.6"
 
 [extras]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
