--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ Combinatorics = "1"
 Documenter = "1"
 LaTeXStrings = "1"
 RecipesBase = "1"
-SymEngine = "0.12"
+SymEngine = "0.12, 0.13"
 julia = "1.6"
 
 [extras]
