--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SymEngine = "123dc426-2d89-5057-bbad-38513e3affd8"
 
@@ -15,6 +16,7 @@ SymEngine = "123dc426-2d89-5057-bbad-38513e3affd8"
 Combinatorics = "1"
 Documenter = "1"
 LaTeXStrings = "1"
+NaNMath = "1"
 RecipesBase = "1"
 SymEngine = "0.12, 0.13"
 julia = "1.6"
